fix search result icon vertical alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -217,7 +217,7 @@ h4.disclaimer {
   border-bottom: dashed 1px #999;
   list-style:none;
   margin-left: 15px;
-  background:url(/assets/quick_answers_icon_small.png)  0px 5px no-repeat;
+  background:url(/assets/quick_answers_icon_small.png)  0px 9px no-repeat;
 } 
 #results ul h1{
 	margin-top:12px;
